# cookiecutter-kii-5g

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_folder_name}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_folder_name}}/.github/: pull_request_template.md
{{cookiecutter.project_folder_name}}/.github/workflows/: lint.yaml  unit_tests.yaml
{{cookiecutter.project_folder_name}}/scripts/: init_dev_env.sh  refresh_venv.sh  run_merge_check.sh
{{cookiecutter.project_folder_name}}/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/tests/unit/: test_example.py
